--- a/index.html
+++ b/index.html
@@ -2,148 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Winter Arc</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    :root { --accent:#6366f1; --accent2:#818cf8; }
-    html { scroll-behavior:smooth; font-family:'Inter',sans-serif; }
-    body {
-      margin:0; background:#18181b; color:#f8f9fa;
-      background:
-        radial-gradient(circle at 8% 12%, rgba(99,102,241,0.10), transparent 10%),
-        radial-gradient(circle at 92% 88%, rgba(129,140,248,0.07), transparent 12%),
-        linear-gradient(180deg,#060607 0%,#0e0f11 60%,#0b0b0c 100%);
-      min-height:100vh; overflow-x:hidden;
-      transition:background 1s ease, color 1s ease;
-    }
-    body::before, body::after {
-      content:""; position:absolute; width:400px; height:400px; border-radius:50%;
-      filter:blur(120px); opacity:0.5; z-index:0; animation:float 12s infinite ease-in-out alternate;
-    }
-    body::before { background:var(--accent); top:-100px; left:-150px; }
-    body::after { background:var(--accent2); bottom:-120px; right:-120px; animation-delay:4s; }
-    @keyframes float { from{transform:translate(0,0)} to{transform:translate(30px,-50px)} }
-
-    .top-btn {
-      position:absolute; top:1.2rem; right:1.2rem;
-      font-size:1.7rem; cursor:pointer; background:none; border:none;
-      color:var(--accent); z-index:10; transition:.3s;
-    }
-    .top-btn:hover { transform:scale(1.2); }
-
-    .logo {
-      position:absolute; top:1.2rem; left:1.2rem;
-      width:40px; height:40px; border-radius:12px;
-      background:rgba(255,255,255,.1); display:flex; align-items:center; justify-content:center;
-      font-size:1.2rem; color:var(--accent); font-weight:700;
-    }
-
-    .hero {
-      min-height:100vh; display:flex; flex-direction:column;
-      align-items:center; justify-content:center; text-align:center;
-      padding:2rem 1.25rem; box-sizing:border-box; position:relative; z-index:1;
-    }
-    .container {
-      max-width:420px; width:100%;
-      padding:2rem; border-radius:1.5rem;
-      background:rgba(255,255,255,0.1); backdrop-filter:blur(12px);
-      box-shadow:0 8px 32px rgba(0,0,0,0.2);
-      margin:0 auto;
-    }
-    h1 {
-      font-size:2.3rem; margin:0 0 1rem;
-      font-weight:700;
-      background:linear-gradient(270deg,var(--accent),var(--accent2));
-      -webkit-background-clip:text; -webkit-text-fill-color:transparent;
-      animation:gradientMove 6s infinite linear;
-    }
-    @keyframes gradientMove {0%{background-position:0%}100%{background-position:100%}}
-    #countdown { font-weight:700; font-size:1.1rem; margin-bottom:1.5rem; color:var(--accent2); }
-    #countdown.celebrate { color:#fff; text-shadow:0 0 20px rgba(99,102,241,.6); }
-
-    .buttons { display:flex; justify-content:center; gap:1rem; flex-wrap:wrap; }
-    .btn {
-      display:flex; align-items:center; gap:.6rem;
-      padding:.75rem 1.5rem; border-radius:.75rem;
-      background:rgba(255,255,255,.08);
-      border:1px solid rgba(255,255,255,.3);
-      color:var(--accent); text-decoration:none; font-weight:600; transition:.3s;
-    }
-    .btn svg { width:20px; height:20px; fill:currentColor; }
-    .btn:hover { background:var(--accent); color:#fff; transform:translateY(-3px) scale(1.05); }
-
-    .down-anchor { position:absolute; bottom:15%; left:50%; transform:translateX(-50%); }
-    .down-btn {
-      background:none; border:none; color:var(--accent);
-      cursor:pointer; transition:.3s; animation:floatBtn 2s infinite;
-    }
-    .down-btn svg { width:40px; height:40px; stroke:currentColor; stroke-width:2; fill:none; }
-    .down-btn:hover { color:#fff; }
-    @keyframes floatBtn {0%,100%{transform:translateY(0)}50%{transform:translateY(10px)}}
-
-    #features {
-      max-width:960px; margin:3rem auto 6rem; padding:3rem 1.5rem;
-      background:rgba(255,255,255,0.04); border-radius:1.25rem;
-      backdrop-filter:blur(10px); text-align:center;
-    }
-    .features-grid {
-      display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-      gap:1.5rem; margin-top:2rem;
-    }
-    .feature {
-      background:rgba(255,255,255,0.03); border-radius:1rem;
-      padding:1.5rem; opacity:0; transform:translateY(30px);
-      transition:opacity .6s ease, transform .6s ease, box-shadow .3s ease;
-    }
-    .feature.show { opacity:1; transform:translateY(0); }
-    .feature:hover { transform:translateY(-5px) scale(1.03); box-shadow:0 6px 20px rgba(0,0,0,0.25); }
-    .feature h3 { margin:.3rem 0; color:#fff; font-size:1.1rem; }
-    .feature p { margin:0; opacity:.85; font-size:.95rem; }
-
-    footer {
-      display:flex; justify-content:space-between; align-items:center;
-      padding:1rem 2rem; font-size:.9rem; background:rgba(255,255,255,0.05);
-      border-top:1px solid rgba(255,255,255,0.1);
-      backdrop-filter:blur(6px);
-      font-weight:500; letter-spacing:.5px;
-    }
-
-    /* красивый свитч языков */
-    .lang-switch {
-      display:flex; align-items:center; background:rgba(255,255,255,.08);
-      border-radius:1.5rem; overflow:hidden;
-    }
-    .lang-btn {
-      padding:.4rem 1rem; border:none; cursor:pointer;
-      font-weight:600; font-size:.85rem;
-      background:none; color:#aaa; transition:.3s;
-    }
-    .lang-btn.active { background:var(--accent); color:#fff; }
-
-    @media(max-width:480px){
-      h1{font-size:1.8rem;}
-      .btn{padding:.65rem 1.2rem; font-size:.9rem;}
-      .down-btn svg{width:32px;height:32px;}
-      footer{flex-direction:column; gap:.5rem; font-size:.8rem; text-align:center;}
-      .container{padding:1.5rem; margin:0 1rem;}
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="logo">W</div>
-  <button class="top-btn" id="menuBtn">☰</button>
-
-  <section class="hero">
+  <button class="top-btn" id="menuBtn" aria-label="Open navigation menu" aria-expanded="false">☰</button>
+  <nav id="sideMenu" class="side-menu" aria-hidden="true">
+    <button id="closeMenu" class="close-btn" aria-label="Close navigation menu">×</button>
+    <ul role="menubar">
+      <li role="none"><a role="menuitem" href="#hero">Home</a></li>
+      <li role="none"><a role="menuitem" href="#features">About</a></li>
+      <li role="none"><a role="menuitem" href="#socials">Socials</a></li>
+    </ul>
+  </nav>
+  <section class="hero" id="hero">
     <div class="container">
-      <h1 data-en="Winter Arc" data-uk="Зимова Арка">Winter Arc</h1>
+      <h1 data-en="Winter Arc" data-uk="Winter Arc">Winter Arc</h1>
       <div id="countdown">Loading...</div>
       <div class="buttons">
         <a class="btn" href="#" data-en="iOS" data-uk="iOS">
           <svg viewBox="0 0 24 24"><path d="M17.6 18.1c-.8 1.2-1.6 2.3-3 2.3s-1.9-.7-3.2-.7-1.9.7-3.1.7-2.1-1.1-3-2.3c-1.7-2.5-3-7.1-.9-10.2 1.1-1.7 2.9-2.6 4.8-2.6 1.5 0 2.5.8 3.2.8s1.9-.9 3.3-.8c1.5 0 2.9.8 4 2.2-3.5 2-2.9 7.2.9 8.9z"/></svg>
           iOS
         </a>
-        <a class="btn" href="#" data-en="Android" data-uk="Андроїд">
+        <a class="btn" href="#" data-en="Android" data-uk="Android">
           <svg viewBox="0 0 24 24"><path d="M17.6 12.2c-.4-3.3 2.7-5 2.7-5-1.5-2.2-4-2.2-4-2.2-3.2-.3-4.6 2.1-4.6 2.1-1.6-2.1-4-2.1-4-2.1s-2.6 0-4.1 2.2c0 0 3.1 1.6 2.7 5-1.7 1.3-2.6 3.1-2.6 3.1 1.6.5 3.1 0 3.1 0 .7 2.6 2.7 3.3 2.7 3.3.4-1.4-.2-2.9-.2-2.9 0 0 1.2.8 3 .8s3-.8 3-.8-.6 1.5-.2 2.9c0 0 2-.7 2.7-3.3 0 0 1.6.5 3.1 0 0 0-.9-1.8-2.6-3.1z"/></svg>
           Android
         </a>
@@ -155,7 +39,6 @@
       </button>
     </div>
   </section>
-
   <section id="features">
     <h2 data-en="What is Winter Arc" data-uk="Що таке Winter Arc">What is Winter Arc</h2>
     <div class="features-grid">
@@ -170,7 +53,27 @@
       </div>
     </div>
   </section>
-
+  <section id="socials">
+    <h2 data-en="Follow Us" data-uk="Соцмережі">Follow Us</h2>
+    <div class="socials-grid">
+      <a class="btn social-btn" href="#" aria-label="Telegram">
+        <svg viewBox="0 0 24 24"><path d="M9.78 18.65l.28-4.23 7.68-6.92c.34-.31-.07-.46-.52-.19L4.46 13.78c-.35.2-.16.64.29.51l3.46-.99 1.6 3.35c.19.41.75.41.97 0zM20.65 3.35C18.8 1.5 15.2 0 12 0S5.2 1.5 3.35 3.35 0 8.8 0 12s1.5 6.65 3.35 8.5S8.8 24 12 24s6.65-1.5 8.5-3.35S24 15.2 24 12s-1.5-6.65-3.35-8.5z"/></svg>
+        Telegram
+      </a>
+      <a class="btn social-btn" href="#" aria-label="X">
+        <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+        X
+      </a>
+      <a class="btn social-btn" href="#" aria-label="Instagram">
+        <svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.227.227 2.695.072 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 3.99 2.03 6.322 6.004 6.004C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 3.99-.2 6.322-2.03 6.004-6.004.058-1.28.072-1.689.072-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.475C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-9.845a1.44 1.44 0 100-2.881 1.44 1.44 0 000 2.881z"/></svg>
+        Instagram
+      </a>
+      <a class="btn social-btn" href="#" aria-label="YouTube">
+        <svg viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 00-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 00.502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 002.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 002.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+        YouTube
+      </a>
+    </div>
+  </section>
   <footer>
     <div>© <span id="year"></span> Winter Arc</div>
     <div class="lang-switch">
@@ -178,57 +81,6 @@
       <button class="lang-btn" data-lang="uk">UA</button>
     </div>
   </footer>
-
-  <script>
-    // countdown
-    (function(){
-      function getTarget(){let now=new Date(),y=now.getFullYear();let t=new Date(y,9,1);if(now>=t)y++;return new Date(y,9,1);}
-      const el=document.getElementById('countdown'),target=getTarget();
-      function pad(v){return String(v).padStart(2,'0');}
-      function upd(){let diff=Math.max(0,target-new Date());let d=Math.floor(diff/86400000),h=Math.floor(diff/3600000)%24,m=Math.floor(diff/60000)%60,s=Math.floor(diff/1000)%60;if(diff<=0){el.textContent="It's October 1st!";el.classList.add('celebrate');clearInterval(timer);return;}el.textContent=`${d}d ${pad(h)}h ${pad(m)}m ${pad(s)}s`;}
-      upd();let timer=setInterval(upd,1000);
-    })();
-
-    // scroll
-    document.getElementById('scrollDown').onclick=()=>{document.getElementById('features').scrollIntoView({behavior:'smooth'});};
-
-    // fade-in features
-    const fEls=document.querySelectorAll('.feature');const obs=new IntersectionObserver(entries=>{entries.forEach(e=>{if(e.isIntersecting)e.target.classList.add('show');});},{threshold:.2});fEls.forEach(el=>obs.observe(el));
-
-    // смена темы
-    const themes=[{accent:"#6366f1",accent2:"#818cf8"},{accent:"#06b6d4",accent2:"#22d3ee"},{accent:"#ec4899",accent2:"#f472b6"},{accent:"#84cc16",accent2:"#bef264"}];
-    let cur=0;const root=document.documentElement;
-    function switchTheme(){cur=(cur+1)%themes.length;root.style.setProperty("--accent",themes[cur].accent);root.style.setProperty("--accent2",themes[cur].accent2);}
-    setInterval(switchTheme,8000);
-
-    // футер: год
-    document.getElementById("year").textContent=new Date().getFullYear();
-
-    // переключение языка
-    const langBtns=document.querySelectorAll(".lang-btn");
-    function setLang(lang){
-      // заголовки
-      document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-        if(el.tagName==="H1"||el.tagName==="H2"||el.tagName==="A") el.textContent=el.getAttribute("data-"+lang);
-      });
-      // блоки features
-      document.querySelectorAll(".feature").forEach(el=>{
-        el.querySelector("h3").textContent=el.getAttribute("data-"+lang+"-title");
-        el.querySelector("p").textContent=el.getAttribute("data-"+lang+"-text");
-      });
-    }
-    langBtns.forEach(btn=>{
-      btn.addEventListener("click",()=>{
-        langBtns.forEach(b=>b.classList.remove("active"));
-        btn.classList.add("active");
-        setLang(btn.dataset.lang);
-      });
-    });
-    // дефолт: английский
-    setLang("en");
-
-    // menu
-    document.getElementById("menuBtn").onclick=()=>alert("Menu is under construction :)");
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
