--- a/index.html
+++ b/index.html
@@ -41,22 +41,23 @@
   </section>
   <section id="features">
     <h2 data-en="What is Winter Arc" data-uk="Що таке Winter Arc">What is Winter Arc</h2>
+    <p class="features-intro" data-en="Winter Arc is a minimalist challenge app that pushes you out of your comfort zone with daily tasks like taking a cold shower, shaving your head, or mastering a new skill. Stay motivated, track your progress, and join a community of bold adventurers!" data-uk="Winter Arc — це мінімалістичний додаток для викликів, який виводить вас із зони комфорту за допомогою щоденних завдань, таких як холодний душ, гоління налисо чи освоєння нової навички. Залишайтеся мотивованими, відстежуйте прогрес і приєднуйтесь до спільноти сміливих шукачів пригод!"></p>
     <div class="features-grid">
-      <div class="feature" data-en-title="Secure Messages" data-uk-title="Безпечні повідомлення" data-en-text="End-to-end encryption: your chats remain private." data-uk-text="End-to-end шифрування: ваші діалоги залишаються приватними.">
-        <h3>Secure Messages</h3><p>End-to-end encryption: your chats remain private.</p>
+      <div class="feature" data-en-title="Daily Challenges" data-uk-title="Щоденні виклики" data-en-text="Get unique tasks every day to boost your discipline and growth, from cold showers to bold experiments." data-uk-text="Отримуйте унікальні завдання щодня для розвитку дисципліни та зростання, від холодного душу до сміливих експериментів.">
+        <h3>Daily Challenges</h3><p>Get unique tasks every day to boost your discipline and growth, from cold showers to bold experiments.</p>
       </div>
-      <div class="feature" data-en-title="Fast and Smooth" data-uk-title="Швидко та плавно" data-en-text="Optimized engine — instant responses and interface." data-uk-text="Оптимізований двигун — миттєві відповіді та інтерфейс.">
-        <h3>Fast and Smooth</h3><p>Optimized engine — instant responses and interface.</p>
+      <div class="feature" data-en-title="Track Your Journey" data-uk-title="Відстежуйте свою подорож" data-en-text="Monitor your progress with a sleek interface and stay motivated with streaks and achievements." data-uk-text="Слідкуйте за своїм прогресом за допомогою зручного інтерфейсу та залишайтеся мотивованими завдяки серіям і досягненням.">
+        <h3>Track Your Journey</h3><p>Monitor your progress with a sleek interface and stay motivated with streaks and achievements.</p>
       </div>
-      <div class="feature" data-en-title="Smart Features" data-uk-title="Розумні функції" data-en-text="Notifications, sync and tips help you stay connected." data-uk-text="Сповіщення, синхронізація та підказки допомагають залишатися на зв’язку.">
-        <h3>Smart Features</h3><p>Notifications, sync and tips help you stay connected.</p>
+      <div class="feature" data-en-title="Community Vibes" data-uk-title="Спільнота однодумців" data-en-text="Join others in the Winter Arc challenge, share your wins, and get inspired by a global community." data-uk-text="Приєднуйтесь до інших у викликах Winter Arc, діліться перемогами та надихайтеся глобальною спільнотою.">
+        <h3>Community Vibes</h3><p>Join others in the Winter Arc challenge, share your wins, and get inspired by a global community.</p>
       </div>
     </div>
   </section>
   <section id="socials">
     <h2 data-en="Follow Us" data-uk="Соцмережі">Follow Us</h2>
     <div class="socials-grid">
-      <a class="btn social-btn" href="t.me/wappua" aria-label="Telegram">
+      <a class="btn social-btn" href="https://t.me/wappua" aria-label="Telegram">
         <svg viewBox="0 0 24 24"><path d="M21.6 2.4c-.2-.2-.5-.2-.7 0L2.4 14.8c-.3.2-.3.6 0 .8l4.2 2.1c.2.1.5.1.7-.1l12.1-8.6c.3-.2.3-.6 0-.8l-4.2-2.1c-.2-.1-.5-.1-.7.1L2.4 14.8v4.2c0 .3.2.5.5.5h16.7c.3 0 .5-.2.5-.5V2.9c0-.3-.2-.5-.5-.5zM12 21.6c-.3 0-.5-.2-.5-.5v-4.2c0-.3.2-.5.5-.5s.5.2.5.5v4.2c0 .3-.2.5-.5.5z"/></svg>
         Telegram
       </a>
@@ -68,7 +69,7 @@
         <svg viewBox="0 0 24 24"><path d="M19.6 6.4c-1.3-.8-2.2-2-2.2-3.5V2h-3.2v15.1c0 1.7-1.4 3-3.1 3s-3.1-1.3-3.1-3 1.4-3 3.1-3c.3 0 .6 0 .9.1V10c-.3 0-.6-.1-.9-.1-3.5 0-6.3 2.8-6.3 6.3s2.8 6.3 6.3 6.3 6.3-2.8 6.3-6.3V9.7c1.3.8 2.8 1.3 4.4 1.3V7.6c-1.1 0-2.2-.3-3.2-.9z"/></svg>
         TikTok
       </a>
-      <a class="btn social-btn" href="https://www.instagram.com/winteriscomingson/" aria-label="Instagram">
+      <a class="btn social-btn" href="https://www.instagram.com/winteriscomingson" aria-label="Instagram">
         <svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.227.227 2.695.072 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 3.99 2.03 6.322 6.004 6.004C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 3.99-.2 6.322-2.03 6.004-6.004.058-1.28.072-1.689.072-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.475C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-9.845a1.44 1.44 0 100-2.881 1.44 1.44 0 000 2.881z"/></svg>
         Instagram
       </a>
@@ -78,7 +79,7 @@
     <div>© <span id="year"></span> Winter Arc</div>
     <div class="lang-switch">
       <button class="lang-btn active" data-lang="en">EN</button>
-      <button class="lang-btn" data-lang="uk">UA</button>
+      <button class="lang-btn" data-lang="uk">UA</button> 
     </div>
   </footer>
   <script src="script.js"></script>
