--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="logo">W</div>
   <button class="top-btn" id="menuBtn" aria-label="Open navigation menu" aria-expanded="false">☰</button>
+  
   <nav id="sideMenu" class="side-menu" aria-hidden="true">
     <button id="closeMenu" class="close-btn" aria-label="Close navigation menu">×</button>
     <ul role="menubar">
@@ -41,11 +42,12 @@
       </a>
     </div>
   </nav>
+
   <section class="hero" id="hero">
     <h1 data-en="Winter Arc" data-uk="Winter Arc">Winter Arc</h1>
     <div class="container">
       <div id="countdown">Loading...</div>
-      <p id="hurry" data-en="It's coming soon..." data-uk="Встигни приєднатися!">It's coming soon/p>
+      <p id="hurry" data-en="Hurry up and join!" data-uk="Успей успеть і приєднатися!">Hurry up and join!</p>
     </div>
     <div class="down-anchor">
       <button id="scrollDown" class="down-btn" aria-label="Scroll down">
@@ -53,6 +55,7 @@
       </button>
     </div>
   </section>
+
   <section id="features">
     <h2 data-en="What is Winter Arc" data-uk="Що таке Winter Arc">What is Winter Arc</h2>
     <p class="features-intro" data-en="Winter Arc is a minimalist challenge app that pushes you out of your comfort zone with daily tasks like taking a cold shower, shaving your head, or mastering a new skill. Stay motivated, track your progress, and join a community of bold adventurers!" data-uk="Winter Arc — це мінімалістичний додаток для викликів, який виводить вас із зони комфорту за допомогою щоденних завдань, таких як холодний душ, гоління налисо чи освоєння нової навички. Залишайтеся мотивованими, відстежуйте прогрес і приєднуйтесь до спільноти сміливих шукачів пригод!"></p>
@@ -68,27 +71,17 @@
       </div>
     </div>
   </section>
+
   <section id="socials">
     <h2 data-en="Follow Us" data-uk="Соцмережі">Follow Us</h2>
     <div class="socials-grid">
-      <a class="btn social-btn" href="https://t.me/wappua" aria-label="Telegram">
-        <svg viewBox="0 0 24 24"><path d="M21.6 2.4c-.2-.2-.5-.2-.7 0L2.4 14.8c-.3.2-.3.6 0 .8l4.2 2.1c.2.1.5.1.7-.1l12.1-8.6c.3-.2.3-.6 0-.8l-4.2-2.1c-.2-.1-.5-.1-.7.1L2.4 14.8v4.2c0 .3.2.5.5.5h16.7c.3 0 .5-.2.5-.5V2.9c0-.3-.2-.5-.5-.5zM12 21.6c-.3 0-.5-.2-.5-.5v-4.2c0-.3.2-.5.5-.5s.5.2.5.5v4.2c0 .3-.2.5-.5.5z"/></svg>
-        Telegram
-      </a>
-      <a class="btn social-btn" href="https://x.com/chelovekeo" aria-label="X">
-        <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
-        X
-      </a>
-      <a class="btn social-btn" href="https://www.tiktok.com/@wappua" aria-label="TikTok">
-        <svg viewBox="0 0 24 24"><path d="M19.6 6.4c-1.3-.8-2.2-2-2.2-3.5V2h-3.2v15.1c0 1.7-1.4 3-3.1 3s-3.1-1.3-3.1-3 1.4-3 3.1-3c.3 0 .6 0 .9.1V10c-.3 0-.6-.1-.9-.1-3.5 0-6.3 2.8-6.3 6.3s2.8 6.3 6.3 6.3 6.3-2.8 6.3-6.3V9.7c1.3.8 2.8 1.3 4.4 1.3V7.6c-1.1 0-2.2-.3-3.2-.9z"/></svg>
-        TikTok
-      </a>
-      <a class="btn social-btn" href="https://www.instagram.com/winteriscomingson" aria-label="Instagram">
-        <svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.227.227 2.695.072 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 3.99 2.03 6.322 6.004 6.004C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 3.99-.2 6.322-2.03 6.004-6.004.058-1.28.072-1.689.072-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.475C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-9.845a1.44 1.44 0 100-2.881 1.44 1.44 0 000 2.881z"/></svg>
-        Instagram
-      </a>
+      <a class="btn social-btn" href="https://t.me/wappua" aria-label="Telegram">Telegram</a>
+      <a class="btn social-btn" href="https://x.com/chelovekeo" aria-label="X">X</a>
+      <a class="btn social-btn" href="https://www.tiktok.com/@wappua" aria-label="TikTok">TikTok</a>
+      <a class="btn social-btn" href="https://www.instagram.com/winteriscomingson" aria-label="Instagram">Instagram</a>
     </div>
   </section>
+
   <footer>
     <div>© <span id="year"></span> Winter Arc</div>
     <div class="lang-switch">
@@ -96,6 +89,7 @@
       <button class="lang-btn" data-lang="uk">UA</button> 
     </div>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
