--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1 data-en="Winter Arc" data-uk="Winter Arc">Winter Arc</h1>
     <div class="container">
       <div id="countdown">Loading...</div>
-      <p id="hurry" data-en="Hurry up and join!" data-uk="Успей успеть і приєднатися!">Hurry up and join!</p>
+      <p id="hurry" data-en="t's coming soon..." data-uk="Встигни приєднатися!">It's coming soon...</p>
     </div>
     <div class="down-anchor">
       <button id="scrollDown" class="down-btn" aria-label="Scroll down">
