--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
   <section class="hero" id="hero">
     <h1 data-en="Winter Arc" data-uk="Winter Arc">Winter Arc</h1>
-    <div class="container">
-      <div id="countdown">Loading...</div>
-      <p id="hurry" data-en="t's coming soon..." data-uk="Встигни приєднатися!">It's coming soon...</p>
-    </div>
+   <a href="#features" class="countdown-container">
+  <div id="countdown">Loading...</div>
+  <p id="hurry" data-en="It's coming soon..." data-uk="Встигни приєднатися!">It's coming soon...</p>
+   </a>
     <div class="down-anchor">
       <button id="scrollDown" class="down-btn" aria-label="Scroll down">
         <svg viewBox="0 0 24 24"><path d="M6 9l6 6 6-6"/></svg>
