--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>Connect with us on social media</p>
       </li>
       <li role="none">
-        <a role="menuitem" href="https://github.com/winterarc/app">Source</a>
+        <a role="menuitem" href="https://github.com/trenchertt/wapp">Source</a>
         <p>View the app on GitHub</p>
       </li>
     </ul>
