--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
   <nav id="sideMenu" class="side-menu" aria-hidden="true">
     <button id="closeMenu" class="close-btn" aria-label="Close navigation menu">×</button>
     <ul role="menubar">
-      <li role="none">
-        <a role="menuitem" href="#hero">Home</a>
-        <p>Back to the top of the page</p>
-      </li>
-      <li role="none">
-        <a role="menuitem" href="#features">About</a>
-        <p>Learn more about Winter Arc</p>
-      </li>
-      <li role="none">
-        <a role="menuitem" href="#socials">Socials</a>
-        <p>Connect with us on social media</p>
-      </li>
-      <li role="none">
-        <a role="menuitem" href="https://github.com/trenchertt/wapp">Source</a>
-        <p>View the app on GitHub</p>
-      </li>
-    </ul>
+      <ul role="menubar">
+  <li role="none">
+    <a role="menuitem" href="#hero" data-en="Home" data-uk="Головна">Home</a>
+    <p data-en="Back to the top of the page" data-uk="Повернутися нагору">Back to the top of the page</p>
+  </li>
+  <li role="none">
+    <a role="menuitem" href="#features" data-en="About" data-uk="Про нас">About</a>
+    <p data-en="Learn more about Winter Arc" data-uk="Дізнайтеся більше про Winter Arc">Learn more about Winter Arc</p>
+  </li>
+  <li role="none">
+    <a role="menuitem" href="#socials" data-en="Socials" data-uk="Соцмережі">Socials</a>
+    <p data-en="Connect with us on social media" data-uk="Зв’яжіться з нами в соцмережах">Connect with us on social media</p>
+  </li>
+  <li role="none">
+    <a role="menuitem" href="https://github.com/winterarc/app" data-en="Source" data-uk="Код">Source</a>
+    <p data-en="View the app on GitHub" data-uk="Переглянути код на GitHub">View the app on GitHub</p>
+  </li>
+</ul>
     <!--
     <div class="menu-buttons">
       <a class="btn" href="#" data-en="iOS" data-uk="iOS">
@@ -47,10 +48,10 @@
 
   <section class="hero" id="hero">
     <h1 data-en="Winter Arc" data-uk="Winter Arc">Winter Arc</h1>
-   <a href="#features" class="countdown-container">
-  <div id="countdown">Loading...</div>
-  <p id="hurry" data-en="It's coming soon..." data-uk="Встигни приєднатися!">It's coming soon...</p>
-   </a>
+    <div class="container">
+      <div id="countdown">Loading...</div>
+      <p id="hurry" data-en="t's coming soon..." data-uk="Встигни приєднатися!">It's coming soon...</p>
+    </div>
     <div class="down-anchor">
       <button id="scrollDown" class="down-btn" aria-label="Scroll down">
         <svg viewBox="0 0 24 24"><path d="M6 9l6 6 6-6"/></svg>
