--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p data-en="Connect with us on social media" data-uk="Зв’яжіться з нами в соцмережах">Connect with us on social media</p>
   </li>
   <li role="none">
-    <a role="menuitem" href="https://github.com/winterarc/app" data-en="Source" data-uk="Код">Source</a>
+    <a role="menuitem" href="https://github.com/trenchertt/wapp" data-en="Source" data-uk="Код">Source</a>
     <p data-en="View the app on GitHub" data-uk="Переглянути код на GitHub">View the app on GitHub</p>
   </li>
 </ul>
@@ -52,12 +52,20 @@
       <div id="countdown">Loading...</div>
       <p id="hurry" data-en="t's coming soon..." data-uk="Встигни приєднатися!">It's coming soon...</p>
     </div>
-    <div class="down-anchor">
-      <button id="scrollDown" class="down-btn" aria-label="Scroll down">
-        <svg viewBox="0 0 24 24"><path d="M6 9l6 6 6-6"/></svg>
-      </button>
+    <div class="pre-reg">
+      <a href="#features" class="pre-reg-btn" data-en="Pre-registration" data-uk="Попередня реєстрація">
+        <svg viewBox="0 0 24 24"><path d="M5 12h14M13 6l6 6-6 6"/></svg>
+        <span>Pre-registration</span>
+      </a>
     </div>
-  </section>
+  </div>
+
+  <div class="down-anchor">
+    <button id="scrollDown" class="down-btn" aria-label="Scroll down">
+      <svg viewBox="0 0 24 24"><path d="M6 9l6 6 6-6"/></svg>
+    </button>
+  </div>
+</section>
 
   <section id="features">
     <h2 data-en="What is Winter Arc" data-uk="Що таке Winter Arc">What is Winter Arc</h2>
