--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p id="hurry" data-en="t's coming soon..." data-uk="Встигни приєднатися!">It's coming soon...</p>
     </div>
     <div class="pre-reg">
-      <a href="regestraion.html" class="pre-reg-btn" data-en="Pre-registration" data-uk="Попередня реєстрація">
+      <a href="registration.html" class="pre-reg-btn" data-en="Pre-registration" data-uk="Попередня реєстрація">
         <svg viewBox="0 0 24 24"><path d="M5 12h14M13 6l6 6-6 6"/></svg>
         <span>Pre-registration</span>
       </a>
